# Interactive-Multilingual-AI-Audiobook-Assistant

./: .env.example  .gitignore  App.tsx  CHANGELOG.md  LICENSE  PLAN.md  README.md  build plan A.md  build plan A2.md  build plan.md  index.html  metadata.json  package.json
backend/: Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: main.py
backend/app/api/: auth.py  documents.py  rag.py  translate.py  tts.py  user.py
backend/app/core/: config.py  limiter.py  observability.py  security.py
backend/app/db/: supabase.py
backend/app/middleware/: kill_switch.py
backend/app/models/: schemas.py
backend/app/services/: audio_cache.py  audit.py  chunking.py  circuit_breaker.py  citations.py  conversations.py  embedding.py  extraction.py  groq_client.py  idempotency.py  indexing.py  lang_detect.py  ocr.py  output_filter.py  pdf_extract.py  pipeline.py  preprocess.py  prompt_registry.py  prompts.py  quotas.py  rag.py  rerank.py  retrieval.py  storage.py  translate.py  tts.py  uploads.py  voices.py
backend/tests/: test_auth.py  test_chunking.py  test_circuit_breaker.py  test_citations.py  test_contract.py  test_documents.py  test_extraction.py  test_health.py  test_kill_switch.py  test_lang_detect.py  test_openapi_valid.py  test_output_filter.py  test_preprocess.py  test_prompt_injection.py  test_prompts.py  test_quotas.py  test_rag.py  test_retrieval.py  test_translate.py  test_tts.py  test_tts_endpoint.py  test_uploads.py  test_user.py  test_voices.py
backend/tests/integration/: conftest.py  test_documents_flow.py  (+1 more)
(+87 files in other folders)
